<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitionActivity"
    android:background="@android:color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/submit_app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gads_logo"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_submission"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:id="@+id/project_submission_tv"
        app:layout_constraintTop_toBottomOf="@id/submit_app_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/project_submission_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/last_name_et"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:id="@+id/first_name_et"
            android:hint="@string/first_name"
            android:background="@drawable/white_rect_with_round_courners"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/first_name_et"
            android:paddingStart="10dp"
            android:id="@+id/last_name_et"
            android:hint="@string/last_name"
            android:background="@drawable/white_rect_with_round_courners"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/first_name_et"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:id="@+id/email_et"
            android:hint="@string/email_address"
            android:background="@drawable/white_rect_with_round_courners"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/email_et"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:id="@+id/github_link_et"
            android:hint="@string/project_on_github_link"
            android:background="@drawable/white_rect_with_round_courners"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submission_form_submit_btn"
            app:layout_constraintTop_toBottomOf="@id/github_link_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp"
            android:background="@drawable/submission_form_submit_btn_bg"
            android:textColor="@android:color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>